--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A React Native framework with minimal API and zero boilerplate.",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf lib && babel src -d lib --no-comments"
   },
   "repository": {
     "type": "git",
