--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf lib && babel src -d lib --no-comments"
+    "build": "rm -rf lib && babel src -d lib --no-comments",
+    "lint": "eslint src test"
   },
   "repository": {
     "type": "git",
@@ -20,14 +21,15 @@
   "dependencies": {
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "prop-types": "^15.5.10"
   },
   "peerDependencies": {
     "react": "^15.0.0",
-    "react-native": "^0.45.1",
-    "prop-types": "^15.5.10"
+    "react-native": "^0.45.1"
   },
   "devDependencies": {
+    "react-native": "^0.45.1",
     "babel-cli": "^6.14.1",
     "babel-core": "^6.14.1",
     "babel-eslint": "^7.2.3",
