mod package.json

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+**/node_modules
 
 # Typescript v1 declaration files
 typings/
@@ -105,3 +106,5 @@ gen
 
 ## Project
 lib/
+**/dist
+**/build
