--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirrorn",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A React Native framework with minimal API and zero boilerplate.",
   "main": "./lib/index.js",
   "scripts": {
@@ -25,11 +25,10 @@
     "prop-types": "^15.5.10"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-native": "^0.45.1"
+    "react": "*",
+    "react-native": "*"
   },
   "devDependencies": {
-    "react-native": "^0.45.1",
     "babel-cli": "^6.14.1",
     "babel-core": "^6.14.1",
     "babel-eslint": "^7.2.3",
