--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf lib && babel src -d lib --no-comments",
-    "lint": "eslint src test"
+    "lint": "eslint src test",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
